changed api endpoints

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <div id="user">
                     <p id="message"></p>
-                    <a href="/profile">Profile</a>
+                    <a href="/my-movies">My movies</a>
                     <a href="/create">Create Movie</a>
                     <a href="/search">Search</a>
                     <a id="logoutBtn" href="javascript:void(0)">Logout</a>
